# pick_and_place

./: CMakeLists.txt  README.md  package.xml
launch/: palletizing.launch
src/: palletizing.py
